[package]
name = "polynomials_pro"
version = "0.1.0"
edition = "2021"
repository="https://github.com/jacks0n9/polynomials_pro.git"
authors=["starryuwu"]
readme="README.md"
license="LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
