[package]
name = "polynomials_pro"
description="A crate for pro-level polynomials."
version = "0.1.0"
edition = "2021"
repository="https://github.com/jacks0n9/polynomials_pro.git"
authors=["starryuwu"]
readme="README.md"
license="MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
